ajustes serie y txexex 07

--- a/series.html
+++ b/series.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>TXEXEX</h1>
+<h1 class="series-title">TXEXEX</h1>
 
 {% for comic in site.dailies %}
 <div class="daily-list-item">
