--- a/datos.html
+++ b/datos.html
@@ -9,19 +9,50 @@ layout: default
         <p>Pablo Selín Carrasco Armijo</p>
         <p>b. 1981</p>
         <p>Lives in Melipilla, Chile</p>
-
+         <p>Representation in Santiago, Chile by <a href="https://www.theintuitivemachine.com/">The Intuitive Machine</a></p>
         <p>Download PDF portfolio <a href="./pdf/pabloselin_portfolio.pdf">(english)</a> <a href="./pdf/pabloselin_portafolio.pdf">(español)</a></p>
         <p>Instagram: <a href="https://instagram.com/donhilo/">@donhilo</a></p>
         <p>Deals and ideas write me to <a href="mailto:pabloselin@gmail.com">pabloselin@gmail.com</a></p>
-
 </div>
 
 <h2>Selected exhibitions</h2>
-(Note: Between 2004 - 2011 I worked in the art-world with the latin-american collective Incas of Emergency, you can check more of it in <a href="https://www.youtube.com/user/devilspepegrillo/videos" target="_blank">their youtube channel.</a>)
 
 <ul>
      {% for expo in site.data.expos %}
     <li>{{expo.year}} - {{expo.name}}. {{expo.place}}</li>
+    {% endfor %}
+</ul>
+<p>
+* Between 2004 - 2011 I worked in the art-world with the latin-american collective Incas of Emergency, you can check more of it in <a href="https://www.youtube.com/user/devilspepegrillo/videos" target="_blank">their youtube channel.</a>
+</p>
+<h2>Art fairs</h2>
+
+<ul>
+    {% for fair in site.data.fairs %}
+    <li>{{fair.year}} - {{fair.name}}. {{fair.rep}}</li>
+    {% endfor %}
+</ul>
+
+<h2>Residencies</h2>
+    
+    <ul>
+    {% for residency in site.data.residencies %}
+    <li>{{residency.year}} - {{residency.name}} - <em>{{residency.extra}}</em></li>
+    {% endfor %}
+    </ul>
+
+<h2>FONDART (National Fund for the Development of Culture and the Arts)</h2>
+<ul>
+    {% for concurso in site.data.concursos %}
+    <li>{{concurso.year}} - {{concurso.name}}</li>
+    {% endfor %}
+</ul>
+
+<h2>Comic fairs</h2>
+
+<ul>
+    {% for fair in site.data.comicfairs %}
+    <li>{{fair.year}} - {{fair.name}}. {{fair.place}}</li>
     {% endfor %}
 </ul>
 
@@ -29,7 +60,7 @@ layout: default
 
 <ul>
     {% for antology in site.data.antologies %}
-    <li>{{antology.year}} - {{antology.name}}</li>
+    <li>{{antology.year}} - {{antology.name}}  - <em>{{antology.country}}</em></li>
     {% endfor %}
 </ul>
 
@@ -54,13 +85,5 @@ layout: default
      {% for videogame in site.data.videogames %}
      <li>{{videogame.year}} - {{videogame.name}} <br/> <a href="{{videogame.link}}">Link</a></li>
      {% endfor %}
-</ul>
-
-
-<h2>Grants, etc.</h2>
-<ul>
-    {% for concurso in site.data.concursos %}
-    <li>{{concurso.year}} - {{concurso.name}}</li>
-    {% endfor %}
 </ul>
 
