--- a/datos.html
+++ b/datos.html
@@ -15,7 +15,7 @@ layout: default
         <p>Deals and ideas write me to <a href="mailto:pabloselin@gmail.com">pabloselin@gmail.com</a></p>
 </div>
 
-<h2>Selected exhibitions</h2>
+<h2>Selected group exhibitions</h2>
 
 <ul>
      {% for expo in site.data.expos %}
