--- a/datos.html
+++ b/datos.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="twocols">
 
-        <p>Pablo Selín Carrasco Armijo</p>
+        <p>Pablo Selín</p>
         <p>b. 1981</p>
         <p>Lives in Melipilla, Chile</p>
          <p>Representation in Santiago, Chile by <a href="https://www.theintuitivemachine.com/">The Intuitive Machine</a></p>
