--- a/datos.html
+++ b/datos.html
@@ -11,7 +11,7 @@ layout: default
         <p>Lives in Melipilla, Chile</p>
          <p>Representation in Santiago, Chile by <a href="https://www.theintuitivemachine.com/">The Intuitive Machine</a></p>
         <p>Download PDF portfolio <a href="./pdf/pabloselin_portfolio.pdf">(english)</a> <a href="./pdf/pabloselin_portafolio.pdf">(español)</a></p>
-        <p>Instagram: <a href="https://instagram.com/donhilo/">@donhilo</a></p>
+        <p>Instagram: <a href="https://instagram.com/pablo_selin/">@pablo_selin</a></p>
         <p>Deals and ideas write me to <a href="mailto:pabloselin@gmail.com">pabloselin@gmail.com</a></p>
 </div>
 
