--- a/datos.html
+++ b/datos.html
@@ -7,7 +7,7 @@ layout: default
 <div class="twocols">
     <p>Pablo Selín</p>
     <p>b. 1981</p>
-    <p>Lives in Melipilla, Chile</p>
+    <p>Lives in Santiago, Chile</p>
     <p>
         Representation in Santiago, Chile by
         <a href="https://www.theintuitivemachine.com/">The Intuitive Machine</a>
