--- a/datos.html
+++ b/datos.html
@@ -32,7 +32,9 @@ layout: default
 
 <h2>Solo exhibitions</h2>
 <ul>
-    <li>2019 - KLAK - Centro Cultural Teatro Serrano, Melipilla, Chile</li>
+    {% for soloexpo in site.data.soloexpos %}
+    <li>{{soloexpo.year}} - {{soloexpo.name}}. {{soloexpo.place}}</li>
+    {% endfor %}
 </ul>
 
 <h2>Selected group exhibitions</h2>
@@ -44,7 +46,7 @@ layout: default
 </ul>
 <p>
     * Between 2004 - 2011 I worked in the art-world with the latin-american
-    collective Incas of Emergency, you can check more of it in
+    collective Incas of Emergency, you can check more of it in the special <a href="{{ site.url}}/works/incas-of-emergency">works</a> section and in 
     <a
         href="https://www.youtube.com/user/devilspepegrillo/videos"
         target="_blank"
@@ -114,8 +116,8 @@ layout: default
 <ul>
     {% for videogame in site.data.videogames %}
     <li>
-        {{videogame.year}} - {{videogame.name}} <br />
-        <a href="{{videogame.link}}">Link</a>
+        {{videogame.year}} - {{videogame.name}} - 
+        <a href="{{videogame.link}}">[+]</a>
     </li>
     {% endfor %}
 </ul>
