--- a/datos.html
+++ b/datos.html
@@ -78,7 +78,7 @@ layout: default
     {% endfor %}
 </ul>
 
-<h2>Comic fairs</h2>
+<h2>Comic events</h2>
 
 <ul>
     {% for fair in site.data.comicfairs %}
