expo y fixes data

--- a/datos.html
+++ b/datos.html
@@ -28,6 +28,9 @@ layout: default
         Deals and ideas write me to
         <a href="mailto:pabloselin@gmail.com">pabloselin@gmail.com</a>
     </p>
+    <p>
+        Programming, videogames, web stuff and computer things at <a href="https://apie.cl">A Pie</a>
+    </p>
 </div>
 
 <h2>Solo exhibitions</h2>
