--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: home
 ---
 
-<p class="caption"> Rolled Thunder 10 - 2019</p>
+<p class="caption"> Endless Piledriver - Galeria Metropolitana, Santiago. Chile - 2020</p>
