ajustes pagina muestra

--- a/muestras_2020.html
+++ b/muestras_2020.html
@@ -6,6 +6,8 @@ layout: default
 
 <h2>Muestras de trabajo</h2>
 
+<h3>Serie de dibujos Trueno Enrollado</h3>
+
 <div class="muestras-trueno">
 	
 	<a href="{{site.url}}/dib_imgs/trueno_enrollado_09_full.jpg"><img src="{{site.url}}/dib_imgs/trueno_enrollado_09_full.jpg" alt="Trueno enrollado 9"></a>
@@ -26,13 +28,25 @@ layout: default
 </div>
 
 <p class="desc">
-	"Trueno Enrollado" Acuarela, gouache y acrílico sobre papel. Dimensiones variables. <span class="help">[Click en las imágenes para verlas a tamaño completo]</span>
+	<strong>"Trueno Enrollado" Acuarela, gouache y acrílico sobre papel. Dimensiones variables.</strong>
+	<br>
+	La primera parte de esta serie de dibujos fue exhibida en la exposición colectiva internacional "Dobles de Proximidad" en el Museo de Arte Contemporáneo de Santiago, Chile el año 2018, así como en la feria de arte contemporáneo Chaco 2018 y en la galería The Intuitive Machine, en Santiago, Chile.
+	<br>
+	La segunda parte de esta serie de dibujos se realizó gracias al financiamiento del Fondo Nacional de la Cultura y las Artes (FONDART) del Estado de Chile y fue exhibida en tres galerías de arte de la Región Metropolitana, Chile.
 </p>
 
 <div class="video-trolley">
+	<h3>Archivo Trolley UC</h3>
+
 	 <video width="600" src="{{site.url}}/videos/trolley_sample.mp4" autoplay="true" loop="true" controls="true"></video>
-	 <p class="desc">Dibujo digital en 360 grados. Diseño y programación de interfaz. <a class="help" href="https://www.eltrolley.cl">[Link externo a proyecto]</a></p>
+	 <p class="desc">Dibujo digital en 360 grados. Dibujo, diseño y programación de interfaz web. <a class="help" href="https://www.eltrolley.cl">[+]</a>
+	 <br>
+	Proyecto realizado para el proyecto VRI (Vicerrectoría de Investigación) de la Pontificia Universidad Católica de Chile. Escuela de Teatro, Facultad de Artes.
+	 </p>
 </div>
+
+
+<h3>Mortal Kombat Moon</h3>
 
 <div class="muestras-trueno">
 	<a href="{{site.url}}/img/mkm/mkm_01.jpg"><img src="{{site.url}}//img/mkm/mkm_01.jpg" alt="Mortal Kombat Moon"></a>
@@ -42,8 +56,10 @@ layout: default
 </div>
 
 <p class="desc">
-	"Mortal Kombat Moon" Cómic autopublicado. <a class="help" href="{{site.url}}/comics/mortal-kombat-moon.html">[Link a cómic completo]</a>
+	"Mortal Kombat Moon" Cómic autopublicado. <a class="help" href="{{site.url}}/comics/mortal-kombat-moon.html">[+]</a>
 </p>
+
+<h3>Sailing stones</h3>
 
 <div class="muestras-trueno">
 	<a href="{{site.url}}/img/sailingstones/sailingstones_01.jpg"><img src="{{site.url}}/img/sailingstones/sailingstones_01.jpg" alt="Sailing Stones 1"></a>
@@ -52,7 +68,7 @@ layout: default
 	<a href="{{site.url}}/img/sailingstones/sailingstones_04.jpg"><img src="{{site.url}}/img/sailingstones/sailingstones_04.jpg" alt="Sailing Stones 4"></a>
 </div>
 
- <p class="desc">"Sailing Stones" Cómic publicado en Ink Brick #5 <a class="help" href="{{site.url}}/comics/sailingstones.html">[Link a cómic completo]</a></p>
+ <p class="desc">"Sailing Stones" Cómic publicado en la revista de cómics experimental Ink Brick #5, NY, Estados Unidos <a class="help" href="{{site.url}}/comics/sailingstones.html">[+]</a></p>
 
 <div class="muestras-trueno">
 	<a href="{{site.url}}/dib_imgs/pip_sample_01.jpg"><img src="{{site.url}}/dib_imgs/pip_sample_01.jpg" alt="PIP"></a>
@@ -61,11 +77,13 @@ layout: default
 	<a href="{{site.url}}/dib_imgs/pip_sample_04.jpg"><img src="{{site.url}}/dib_imgs/pip_sample_04.jpg" alt="PIP"></a>
 </div>
 
-<p class="desc">"PIP" Cómic en desarrollo <a class="help" href="{{site.url}}/comics">[Link a sección de cómics]</a></p>
+<p class="desc">"PIP" Cómic en desarrollo <a class="help" href="{{site.url}}/comics">[+]</a></p>
 
 <div class="video-trolley">
 	<video width="600" src="{{site.url}}/videos/quiensoy_sample.mp4" autoplay="true" loop="true" controls="true"></video>
-	<p class="desc">"Quién soy" prototipo de videojuego para CORFO, diseño, dirección de arte, programación y animación. Gráfica de Noir Yaguara.</p>
+	<p class="desc"><strong>"Quién soy" prototipo de videojuego para CORFO (Corporación de Fomento, Chile)</strong> <br>Diseño, dirección de arte, programación y animación. Gráfica de Noir Yaguara. <br>
+	Proyecto desarrollado en un equipo multidisciplinario de cientistas sociales, artistas, músicos y programadores en conjunto con la consultora Germina.
+	</p>
 </div>
 
 <h2>Manejo de software</h2>
@@ -111,6 +129,14 @@ layout: default
 	<li>
 		Blender
 	</li>
+</ul>
+
+<h3>Motores de juego</h3>
+
+<ul class="list-skills">
+	<li>Godot</li>
+	<li>Unity</li>
+	<li>Ren'Py</li>
 </ul>
 
 <h2>Formación como artista</h2>
