home img and cryojelly stuff

--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: home
 ---
 
-<p class="caption"> Endless Piledriver - Galeria Metropolitana, Santiago. Chile - 2020</p>
+<p class="caption"> Bathtub 9 - Concept render for Cryo Jelly</p>
