--- a/bigdrawings.html
+++ b/bigdrawings.html
@@ -11,7 +11,7 @@ layout: default
 	{% for zoom in site.zooms %}
 
 		<div class="zoomitem">
-			<a href="{{zoom.url}}/">{{ zoom.title }}</a>
+			<a href="{{zoom.url}}">{{ zoom.title }}</a>
 		</div>
 
 	{% endfor %}
