--- a/bigdrawings.html
+++ b/bigdrawings.html
@@ -15,5 +15,8 @@ layout: default
 		</div>
 
 	{% endfor %}
-
+	
+	<footer>
+		Proyecto financiado por el Fondo Nacional de Desarrollo Cultural y las Artes FONDART 2019 
+	</footer>
 </article>
